[package]
name = "pay-engine"
version = "0.1.0"
authors = ["san <san@alien.parts>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies]
arbitrary = { version = "1.0.0", features = ["derive"], optional = true }
csv = "1.1.5"
log = "0.4.14"
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
simple_logger = "1.11.0"
thiserror = "1.0.24"

[[bench]]
name = "my_benchmark"
harness = false
